# ComfyUI-KugelAudio

./: .gitignore  README.md  STUTTERING_FIX.md  __init__.py  install_portable.bat  mps.md  pyproject.toml  reinstall_no-deps.bat  requirements.txt
example_workflow/: KugelAudio_example_workflow.json
kugelaudio-open/: pyproject.toml  requirements.txt
kugelaudio-open/src/kugelaudio_open/models/: kugelaudio_inference.py  tokenizer.py
nodes/: base_kugelaudio.py  multi_speaker_node.py  sage_attention_patch.py  text_utils.py  tts_node.py  voice_clone_node.py  watermark_node.py
