[project]
name = "ComfyUI-KugelAudio"
version = "0.8.5"
description = "ComfyUI nodes for KugelAudio - Open-source text-to-speech with voice cloning for 24 European languages"
license = {file = "LICENSE"}
dependencies = ["torch", "transformers", "huggingface-hub", "accelerate", "diffusers", "numpy", "scipy", "librosa", "soundfile", "tqdm", "audioseal", "bitsandbytes"]

[project.urls]
Repository = "https://github.com/Saganaki22/ComfyUI-KugelAudio"

[tool.comfy]
PublisherId = "saganaki22"
DisplayName = "KugelAudio"
Icon = "https://avatars.githubusercontent.com/u/84208527"
